k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: citizen-affiliation
  labels:
    name: citizen-affiliation
    environment: production
